# Register

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  bbak.ttravis.yml
cmake/Modules/: CodeCoverage.cmake
doc/: CMakeLists.txt  Doxyfile.in  directory_structure.md  main_page.md  requirements_build_install.md  variables_and_targets.md
examples/sample_create_register/: CMakeLists.txt  README.md
examples/sample_create_register/src/: main.cpp
exemples/sample_create_register/: CMakeLists.txt
exemples/sample_create_register/src/: main.cpp
include/: library.h
include/jbr/: Register.hpp  config.hpp.in  library.h  library.hpp
include/jbr/reg/: GetAbsolutePath.hpp  HelloWorld.hpp  Instance.hpp  Manager.hpp  Permission.hpp  Rights.hpp  Variable.hpp  config.hpp.in  exception.hpp  factorial.hpp
include/jbr/reg/node/: Name.hpp
include/jbr/reg/perm/: Rights.hpp
include/jbr/reg/var/: Rights.hpp
include/jbr/reg/var/perm/: Rights.hpp  XMLElement.hpp
include/project-abbr/: config.hpp.in
sample/: header.xml
src/: Register.cpp  factorial.cpp  hello_world.cpp  library.cpp  main.cpp
src/project-abbr/: config.hpp.in
src/reg/: GetAbsolutePath.cpp  HelloWorld.cpp  Instance.cpp  Manager.cpp  Variable.cpp  factorial.cpp  library.cpp  main.cpp
src/reg/var/perm/: Rights.cpp  XMLElement.cpp
test/: CMakeLists.txt  factorial_test.cpp  hello_world_test.cpp
test/src/: get_absolute_path_test.cpp  hello_world_test.cpp  register_apply_rights_test.cpp  register_copy_test.cpp  register_create_test.cpp  register_destroy_test.cpp  register_exist_test.cpp  register_move_test.cpp  register_open_test.cpp  register_rights_test.cpp  register_validity_test.cpp  register_verify_test.cpp  test_runner.cpp
test/src/jbr/reg/Instance/: applyRights_test.cpp  available_test.cpp  copy_test.cpp  get_test.cpp  isCopyable_test.cpp  isMovable_test.cpp  move_test.cpp  remove_test.cpp  set_test.cpp  variableExist_test.cpp  verify_test.cpp
test/src/jbr/reg/Manager/: create_test.cpp  destroy_test.cpp  exist_test.cpp  open_test.cpp
test/src/jbr/reg/Variable/: key_test.cpp  reaccess_test.cpp  read_test.cpp  rename_test.cpp  update_test.cpp
test/src/reg/: variable_operator_test.cpp  variable_set_get_test.cpp  variable_test.cpp
uml/: cRegister.puml
